devops/kustomize/base/database/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-api-to-database
  labels:
    name: enable-api-to-database
    part-of: hsb
    version: 1.0.0
    component: database
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the api to communicate with the database
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 10.99.8.2/32
      ports:
        - port: 5432
          protocol: TCP

  podSelector:
    matchLabels:
      part-of: hsb
      component: api
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-db-migration-to-database
  labels:
    name: enable-db-migration-to-database
    part-of: hsb
    version: 1.0.0
    component: database
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the db-migration to communicate with the database
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 10.99.8.2/32
      ports:
        - port: 5432
          protocol: TCP

  podSelector:
    matchLabels:
      part-of: hsb
      component: database
  policyTypes:
    - Egress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-db-migration-to-internet
  labels:
    name: enable-db-migration-to-internet
    part-of: hsb
    version: 1.0.0
    component: database
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the db-migration to communicate with the internet
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      part-of: hsb
      component: database
  policyTypes:
    - Egress
